[gd_scene load_steps=18 format=3 uid="uid://crkpyisokc1w4"]

[ext_resource type="Script" path="res://scripts/snake.gd" id="1_3b13e"]
[ext_resource type="Texture2D" uid="uid://c8jeegyrueuit" path="res://assets/sprites/enemies/snake/snake_idle_sheet.png" id="1_6qqgl"]
[ext_resource type="Texture2D" uid="uid://605xxy7i2wqg" path="res://assets/sprites/enemies/snake/snake_attack_sheet.png" id="2_uiua0"]
[ext_resource type="PackedScene" uid="uid://cj5ky0bvhedwe" path="res://scenes/player/hurt_player_area.tscn" id="4_574s8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qj4qx"]
atlas = ExtResource("2_uiua0")
region = Rect2(0, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_regd5"]
atlas = ExtResource("2_uiua0")
region = Rect2(16, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhfsc"]
atlas = ExtResource("2_uiua0")
region = Rect2(32, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtgy3"]
atlas = ExtResource("2_uiua0")
region = Rect2(48, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3t57"]
atlas = ExtResource("2_uiua0")
region = Rect2(64, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdlda"]
atlas = ExtResource("2_uiua0")
region = Rect2(80, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhclv"]
atlas = ExtResource("2_uiua0")
region = Rect2(96, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynrsm"]
atlas = ExtResource("1_6qqgl")
region = Rect2(0, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkiis"]
atlas = ExtResource("1_6qqgl")
region = Rect2(16, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ry6ov"]
atlas = ExtResource("1_6qqgl")
region = Rect2(32, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yipu7"]
atlas = ExtResource("1_6qqgl")
region = Rect2(48, 0, 16, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_0lnvw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qj4qx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_regd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhfsc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtgy3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3t57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdlda")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhclv")
}],
"loop": false,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynrsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkiis")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ry6ov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yipu7")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g4pv5"]
size = Vector2(8, 48)

[node name="snake" type="Area2D"]
script = ExtResource("1_3b13e")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -24)
sprite_frames = SubResource("SpriteFrames_0lnvw")
animation = &"attack"
autoplay = "idle"
frame = 6
frame_progress = 1.0

[node name="AttackTimer" type="Timer" parent="."]

[node name="HurtPlayerArea" parent="." instance=ExtResource("4_574s8")]
damage = 10
attack_wait = 1.0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtPlayerArea"]
position = Vector2(0, -24)
shape = SubResource("RectangleShape2D_g4pv5")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
